--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <section class="main_page">
-    <div class="container">
+    <div class="container text-center">
     <header>
         <nav class="navbar navbar-default">
                 <div class="navbar-header">
@@ -37,7 +37,7 @@
                 </div>
         </nav>
     </header>
-        <h1>We are code cafe</h1>
+        <h1 class="text-uppercase">We are code cafe</h1>
         <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum</p>
         <div class="chevron"><i class="fas fa-chevron-down"></i></div>
     </div>
