add section about

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 <section class="main_page">
     <div class="container text-center">
-    <header>
-        <nav class="navbar navbar-default">
+        <header>
+            <nav class="navbar navbar-default">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                             data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -35,24 +35,35 @@
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
-        </nav>
-    </header>
+            </nav>
+        </header>
         <h1 class="text-uppercase">We are code cafe</h1>
         <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum</p>
         <div class="chevron"><i class="fas fa-chevron-down"></i></div>
     </div>
 </section>
 <section class="about">
-    <div class="container">
+    <div class="container this-is-bouncy">
         <div class="row">
             <div class="col-md-6 col-md-offset-1">
-                <h3></h3>
-                <p></p>
-                <a href="#"></a>
+                <h3 class="text-uppercase">This is Bouncy</h3>
+                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
+                    deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non
+                    provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum
+                    fuga. Et harum quidem rerum facilis est et expedita distinctio. </p>
+                <a href="#">Read more</a>
             </div>
             <div class="col-md-3 col-md-offset-1">
-                <img>
+                <img src="images/mobile-phone_03.jpg" alt="image">
             </div>
+        </div>
+    </div>
+    <div class="details-about-B">
+        <div class="container text-center">
+            <h3 class="text-uppercase">DetailS ABOUT BOUNCY</h3>
+            <p class="text-center">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                praesentium</p>
+
         </div>
     </div>
 </section>
