--- a/index.html
+++ b/index.html
@@ -61,11 +61,58 @@
     <div class="details-about-B">
         <div class="container text-center">
             <h3 class="text-uppercase">DetailS ABOUT BOUNCY</h3>
-            <p class="text-center">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+            <p class="text-center comment">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
                 praesentium</p>
-
+            <div class="items">
+                <div class="contrast-bg"><i class="far fa-heart"></i></div>
+                <div><i class="fas fa-tablet-alt"></i></div>
+                <div><i class="far fa-lightbulb"></i></div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <h4 class="col-md-2 col-md-offset-1"> Creative Ideas</h4>
+            </div>
+            <div class="row">
+                <p class="col-md-4 col-md-offset-1 p-16">
+                    At <span class="contrast-font">vero</span> eos et accusamus et iusto odio dignissimos <span> ducimus
+                </span>qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
+                </p>
+                <p class="col-md-5 col-md-offset-1"> At vero eos et accusamus et iusto odio dignissimos ducimus qui
+                    blanditiis praesentium voluptatum deleniti atque <span> corrupti quos </span> dolores et quas
+                    molestias
+                    <span class="contrast-font"> excepturi</span> sint occaecati cupiditate non provident, <span> similique
+                </span> sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum
+                    quidem r</p>
+            </div>
         </div>
     </div>
+    <div class="featured-pj">
+        <div class="container text-center">
+            <h3 class="text-uppercase">FEATURED PROJECTS</h3>
+            <p class="text-center comment">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                praesentium</p>
+        </div>
+        <div class="project-example">
+            <div class="photo-example wide"><img src="images/project-bid_02.jpg" alt="project-example-1"></div>
+            <div class="photo-example"><img src="images/project-2_04.jpg" alt="project-example-2"></div>
+            <div class="photo-example"><img src="images/project-3_03.jpg" alt="project-example-3"></div>
+        </div>
+        <div class="bg">
+            <div class="container submit">
+                <p>At vero eos et <span>accusamus</span> et iusto odio dignissimos ducimus qui blanditiis </p>
+                <a href="#">Submit now</a>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="services">
+    <div class="container text-center">
+        <h3 class="text-uppercase">Our Services</h3>
+        <p class="text-center comment">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+            praesentium</p>
+    </div>
+
 </section>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script src="js/bootstrap.js"></script>
