--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
                 </p>
                 <p class="col-md-5 col-md-offset-1"> At vero eos et accusamus et iusto odio dignissimos ducimus qui
                     blanditiis praesentium voluptatum deleniti atque <span> corrupti quos </span> dolores et quas
-                    molestias
-                    <span class="contrast-font"> excepturi</span> sint occaecati cupiditate non provident, <span> similique
+                    molestias <span class="contrast-font"> excepturi</span> sint occaecati cupiditate non provident, <span> similique
                 </span> sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum
                     quidem r</p>
             </div>
@@ -111,8 +110,212 @@
         <h3 class="text-uppercase">Our Services</h3>
         <p class="text-center comment">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
             praesentium</p>
+        <div class="row serv-parts">
+            <div class="col-sm-6">
+                <div class="col-xs-3">
+                    <ul class="nav nav-tabs tabs sideways">
+                        <li class="active"><a href="#first-serv" data-toggle="tab"><i class="fas fa-headset"></i></a></li>
+                        <li><a href="#second-serv" data-toggle="tab"><i class="fas fa-paint-roller"></i></a></li>
+                        <li><a href="#third-serv" data-toggle="tab"><i class="fas fa-gamepad"></i></a></li>
+                        <li><a href="#fourth-serv" data-toggle="tab"><i class="fas fa-plug"></i></a></li>
+                    </ul>
+                </div>
+                <div class="col-xs-9">
+                    <div class="tab-content">
+                        <div class="tab-pane active text-left" id="first-serv">
+                            <h4>Graphic Design</h4>
+                            <p class="p-16">At vero eos et <span class="contrast-font"> accusamus </span>et iusto odio
+                                dignissimos <span>ducimus</span> qui blanditiis praesentium </p>
+                            <p> quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
+                                <span class="contrast-font"> similique sunt </span> in culpa qui officia deserunt mollitia
+                                animi, id est laborum et dolorum fuga. </p>
+                        </div>
+                        <div class="tab-pane text-left" id="second-serv">
+                            <h4>Another one</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, aperiam at corporis cupiditate
+                                dolorum eos fugiat incidunt, labore laboriosam magnam maiores nobis obcaecati odit omnis
+                                perferendis provident quos sint, ut.</p>
+                        </div>
+                        <div class="tab-pane text-left" id="third-serv">
+                            <h4>Your ad could be here</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda corporis cumque dele
+                                niti dignissimos dolores doloribus exercitationem magnam minus necessitatibus nemo nostrum,
+                                perspiciatis quis soluta tempora, ut. Ab ipsa iste libero?</p>
+                        </div>
+                        <div class="tab-pane text-left" id="fourth-serv">
+                            <h4>Last one</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At explicabo fugit non nulla odio
+                                officiis quaerat rerum sapiente. Aperiam aspernatur ea esse hic illo maiores modi odio
+                                quam ratione saepe?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 right-part">
+                <div class="percents"><img src="images/percent_03.jpg"> <p>Branding</p></div>
+                <div class="percents"><img src="images/percent_03.jpg"> <p>Branding</p></div>
+                <div class="percents"><img src="images/percent_03.jpg"> <p>Branding</p></div>
+            </div>
+        </div>
     </div>
+    <div class="impressed">
+        <div class="container relative">
+            <div class="row">
+                <div class="col-md-6">
+                    <h3 class="text-uppercase">Impressed?</h3>
+                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
+                        deleniti atque corrupti quos dolores et quas molestias</p>
+                    <p class="by-line text-uppercase"><span>- Abdullah Noman</span><br>
+                        Creatice Director, <span class="contrast-font">Code Cafe</span></p>
+                </div>
+                <img class="mac-comp" src="images/mac_03.png">
+            </div>
+        </div>
+    </div>
+</section>
+<section class="portfolio">
+    <div class="container">
+        <h3 class="text-center text-uppercase">The Portfolio</h3>
+        <p class="text-center comment">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+            praesentium</p>
+    </div>
+        <div class="grid-container">
+            <div class="gal-photo">
+                <img class='grid-item grid-item-1' src='images/photo-1.jpg' alt=''>
+                <div class="overlay">
+                    <div class="text-hover text-left">
+                        <h3 class="text-uppercase contrast-font text-left">title here</h3>
+                        <p class="text-left">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                        <div class="text-left"><a href="#"><i class="fas fa-link"></i></a>
+                            <a href="#"><i class="far fa-heart"></i></a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="gal-photo">
+                <img class='grid-item grid-item-2' src='images/photo-5.jpg' alt=''>
+                <div class="overlay">
+                    <div class="text-hover text-left">
+                        <h3 class="text-uppercase contrast-font text-left">title here</h3>
+                        <p class="text-left">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                        <div class="text-left"><a href="#"><i class="fas fa-link"></i></a>
+                            <a href="#"><i class="far fa-heart"></i></a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="gal-photo">
+                <img class='grid-item grid-item-3' src='images/photo-9.jpg' alt=''>
+                <div class="overlay">
+                    <div class="text-hover text-left">
+                        <h3 class="text-uppercase contrast-font text-left">title here</h3>
+                        <p class="text-left">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                        <div class="text-left"><a href="#"><i class="fas fa-link"></i></a>
+                            <a href="#"><i class="far fa-heart"></i></a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="gal-photo">
+                <img class='grid-item grid-item-4' src='images/photo-2.jpg' alt=''>
+                <div class="overlay">
+                    <div class="text-hover text-left">
+                        <h3 class="text-uppercase contrast-font text-left">title here</h3>
+                        <p class="text-left">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                        <div class="text-left"><a href="#"><i class="fas fa-link"></i></a>
+                            <a href="#"><i class="far fa-heart"></i></a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="gal-photo">
+                <img class='grid-item grid-item-5' src='images/photo-6.jpg' alt=''>
+                <div class="overlay">
+                    <div class="text-hover text-left">
+                        <h3 class="text-uppercase contrast-font text-left">title here</h3>
+                        <p class="text-left">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                        <div class="text-left"><a href="#"><i class="fas fa-link"></i></a>
+                            <a href="#"><i class="far fa-heart"></i></a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="gal-photo">
+                <img class='grid-item grid-item-6' src='images/photo-10.jpg' alt=''>
+                <div class="overlay">
+                    <div class="text-hover text-left">
+                        <h3 class="text-uppercase contrast-font text-left">title here</h3>
+                        <p class="text-left">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                        <div class="text-left"><a href="#"><i class="fas fa-link"></i></a>
+                            <a href="#"><i class="far fa-heart"></i></a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="gal-photo">
+                <img class='grid-item grid-item-7' src='images/photo-3.jpg' alt=''>
+                <div class="overlay">
+                    <div class="text-hover text-left">
+                        <h3 class="text-uppercase contrast-font text-left">title here</h3>
+                        <p class="text-left">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                        <div class="text-left"><a href="#"><i class="fas fa-link"></i></a>
+                            <a href="#"><i class="far fa-heart"></i></a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="gal-photo">
+                <img class='grid-item grid-item-8' src='images/photo-7.jpg' alt=''>
+                <div class="overlay">
+                    <div class="text-hover text-left">
+                        <h3 class="text-uppercase contrast-font text-left">title here</h3>
+                        <p class="text-left">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                        <div class="text-left"><a href="#"><i class="fas fa-link"></i></a>
+                            <a href="#"><i class="far fa-heart"></i></a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="gal-photo">
+                <img class='grid-item grid-item-9' src='images/photo-11.jpg' alt=''>
+                <div class="overlay">
+                    <div class="text-hover text-left">
+                        <h3 class="text-uppercase contrast-font text-left">title here</h3>
+                        <p class="text-left">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                        <div class="text-left"><a href="#"><i class="fas fa-link"></i></a>
+                            <a href="#"><i class="far fa-heart"></i></a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="gal-photo">
+                <img class='grid-item grid-item-10' src='images/photo-4.jpg' alt=''>
+                <div class="overlay">
+                    <div class="text-hover text-left">
+                        <h3 class="text-uppercase contrast-font text-left">title here</h3>
+                        <p class="text-left">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                        <div class="text-left"><a href="#"><i class="fas fa-link"></i></a>
+                            <a href="#"><i class="far fa-heart"></i></a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="gal-photo">
+                <img class='grid-item grid-item-11' src='images/photo-8.jpg' alt=''>
+                <div class="overlay">
+                    <div class="text-hover text-left">
+                        <h3 class="text-uppercase contrast-font text-left">title here</h3>
+                        <p class="text-left">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                        <div class="text-left"><a href="#"><i class="fas fa-link"></i></a>
+                            <a href="#"><i class="far fa-heart"></i></a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="gal-photo">
+                <img class='grid-item grid-item-12' src='images/photo-12.jpg' alt=''>
+                <div class="overlay">
+                    <div class="text-hover text-left">
+                        <h3 class="text-uppercase contrast-font text-left">title here</h3>
+                        <p class="text-left">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                        <div class="text-left"><a href="#"><i class="fas fa-link"></i></a>
+                            <a href="#"><i class="far fa-heart"></i></a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <div class="container start-pj">
 
+    </div>
 </section>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script src="js/bootstrap.js"></script>
