--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 <section class="main_page">
-        <header>
-            <div class="container text-center">
+    <header>
+        <div class="container text-center">
             <nav class="navbar navbar-default">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
@@ -37,11 +37,11 @@
                     </ul>
                 </div>
             </nav>
-            </div>
-            <div id="back-top">
-                <a href="#" id="up"><i class="fas fa-angle-up"></i></a>
-            </div>
-        </header>
+        </div>
+        <div id="back-top">
+            <a href="#" id="up"><i class="fas fa-angle-up"></i></a>
+        </div>
+    </header>
     <div class="container text-center">
         <h1 class="text-uppercase">We are code cafe</h1>
         <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum</p>
@@ -355,14 +355,208 @@
             <div class="row">
                 <div class="col-md-3 col-md-offset-1"><img src="images/creative_director_07.jpg"></div>
                 <div class="col-md-4 col-md-offset-3 text-right">
-                    <h4>Abdullah Noman</h4>
-                    <p class="text-uppercase"><em>Creative Director, Code Cafe</em></p>
+                    <p class="person-name">Abdullah Noman <br>
+                        <em class="text-uppercase f-14">Creative Director, Code Cafe</em></p>
                     <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                    <div class="d-flex">
+                        <p class="text-uppercase">Branding</p>
+                        <p>80 %</p>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                             aria-valuemax="100" style="width: 80%;">>
+                        </div>
+                    </div>
+                    <div class="d-flex">
+                        <p class="text-uppercase">Web design</p>
+                        <p>65 %</p>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0"
+                             aria-valuemax="100" style="width: 65%;">>
+                        </div>
+                    </div>
+                    <div class="d-flex">
+                        <p class="text-uppercase">User interface</p>
+                        <p>75 %</p>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                             aria-valuemax="100" style="width: 75%;">
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div> Your Content </div>
-            <div> Your Content </div>
+            <div class="row">
+                <div class="col-md-3 col-md-offset-1"><img src="images/another_photo_07.jpg"></div>
+                <div class="col-md-4 col-md-offset-3 text-right">
+                    <p class="person-name">Name Surname <br>
+                        <em class="text-uppercase f-14">Creative Director, Code Cafe</em></p>
+                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                    <div class="d-flex">
+                        <p class="text-uppercase">Branding</p>
+                        <p>80 %</p>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                             aria-valuemax="100" style="width: 80%;">>
+                        </div>
+                    </div>
+                    <div class="d-flex">
+                        <p class="text-uppercase">Web design</p>
+                        <p>65 %</p>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0"
+                             aria-valuemax="100" style="width: 65%;">>
+                        </div>
+                    </div>
+                    <div class="d-flex">
+                        <p class="text-uppercase">User interface</p>
+                        <p>75 %</p>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                             aria-valuemax="100" style="width: 75%;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3 col-md-offset-1"><img src="images/another_photo_07.jpg"></div>
+                <div class="col-md-4 col-md-offset-3 text-right">
+                    <p class="person-name">Another name <br>
+                        <em class="text-uppercase f-14">Creative Director, Code Cafe</em></p>
+                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                    <div class="d-flex">
+                        <p class="text-uppercase">Branding</p>
+                        <p>10 %</p>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0"
+                             aria-valuemax="100" style="width: 10%;">>
+                        </div>
+                    </div>
+                    <div class="d-flex">
+                        <p class="text-uppercase">Web design</p>
+                        <p>65 %</p>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0"
+                             aria-valuemax="100" style="width: 65%;">>
+                        </div>
+                    </div>
+                    <div class="d-flex">
+                        <p class="text-uppercase">User interface</p>
+                        <p>75 %</p>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                             aria-valuemax="100" style="width: 75%;">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
+    <div class="bg-img text-center">
+        <p>Already Loved Us? Let’s talk!</p>
+        <a href="#">Contact us</a>
+    </div>
+    <div class="testimonials">
+        <div class="container">
+            <h3 class="text-center text-uppercase">testimonials</h3>
+            <p class="text-center comment">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                praesentium</p>
+            <div class="owl-carousel feedback">
+                <div class="row">
+                    <div class="col-md-2 col-md-offset-1"><img class="img-circle" src="images/testimonial_11.jpg"
+                                                               alt=""></div>
+                    <div class="col-md-8"><p class="f-16">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Atque aut cum dignissimos
+                        dolorum ea eius, enim et eveniet exercitationem iusto laboriosam magnam porro quia, quidem quod,
+                        reprehenderit saepe ut. Aliquam!<br> <br>
+                        <strong class="text-uppercase contrast-font">Partho</strong> <br>
+                        <span class="text-uppercase">FOUNDER, ARTWAYS BD</span>
+                    </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2 col-md-offset-1"><img class="img-circle" src="images/testimonial_11.jpg"
+                                                               alt=""></div>
+                    <div class="col-md-8"><p class="f-16">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Atque aut cum dignissimos
+                        dolorum ea eius, enim et eveniet exercitationem iusto laboriosam magnam porro quia, quidem quod,
+                        reprehenderit saepe ut. Aliquam!<br> <br>
+                        <strong class="text-uppercase contrast-font">Partho</strong> <br>
+                        <span class="text-uppercase">FOUNDER, ARTWAYS BD</span>
+                    </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2 col-md-offset-1"><img class="img-circle" src="images/testimonial_11.jpg"
+                                                               alt=""></div>
+                    <div class="col-md-8"><p class="f-16">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Atque aut cum dignissimos
+                        dolorum ea eius, enim et eveniet exercitationem iusto laboriosam magnam porro quia, quidem quod,
+                        reprehenderit saepe ut. Aliquam!<br> <br>
+                        <strong class="text-uppercase contrast-font">Partho</strong> <br>
+                        <span class="text-uppercase">FOUNDER, ARTWAYS BD</span>
+                    </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="blog" id="Blog">
+    <div class="container">
+        <h3 class="text-uppercase">Latest news</h3>
+        <p class="comment">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+            praesentium</p>
+        <div class="owl-carousel">
+            <div><h4>The trending Landing Pages</h4>
+                <h5 class="text-uppercase">by <span class="contrast-font">Kabir Uddin</span> <br><br>
+                    <span class="note text-capitalize">6950 Likes - 243 Comments - 703 shares</span>
+                </h5>
+                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
+                    deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non
+                    provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum
+                    fuga. Et harum quidem rerum facilis est et expedita distinctio...
+                </p>
+                <p id="collapse" class="hidden-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium atque cupiditate eaque eveniet
+                    facilis hic molestias necessitatibus nemo nisi nulla obcaecati placeat possimus, quasi quisquam
+                    repellendus reprehenderit ut vel voluptate.</p>
+                <a href="#collapse" class="nav-toggle read_more">+ Read More</a>
+            </div>
+            <div><h4>New Topic</h4>
+                <h5 class="text-uppercase">by <span class="contrast-font">Kabir Uddin</span> <br><br>
+                    <span class="note text-capitalize">6950 Likes - 243 Comments - 703 shares</span>
+                </h5>
+                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
+                    deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non
+                    provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum
+                    fuga. Et harum quidem rerum facilis est et expedita distinctio...
+                </p>
+            </div>
+            <div><h4>The trending Landing Pages</h4>
+                <h5 class="text-uppercase">by <span class="contrast-font">Kabir Uddin</span> <br><br>
+                    <span class="note text-capitalize">6950 Likes - 243 Comments - 703 shares</span>
+                </h5>
+                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
+                    deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non
+                    provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum
+                    fuga. Et harum quidem rerum facilis est et expedita distinctio...
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="price">
+    <div class="container">
+        <h3 class="text-uppercase">Latest news</h3>
+        <p class="comment">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+            praesentium</p>
     </div>
 </section>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
