add section contacts

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#"><img src="images/logo_03.png" alt="logo"></a>
+                    <a class="navbar-brand" href="#"><img src="images/logo_white.png" alt="logo"></a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right" id="menu-yak">
@@ -621,18 +621,60 @@
 </section>
 <section class="contact" id="Contact">
     <div class="our_contacts">
-    <div class="container text-center">
-        <h3 class="text-uppercase">Contact us</h3>
-        <p class="comment">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-            praesentium</p>
-        <div class="d-flex j-content-center">
-            <div class="contact-info"><img href="" alt=""> <p></p> </div>
-            <div class="contact-info"><img href="" alt=""> <p></p></div>
-            <div class="contact-info"><img href="" alt=""> <p></p></div>
+        <div class="container text-center">
+            <h3 class="text-uppercase">Contact us</h3>
+            <p class="comment">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                praesentium</p>
+            <div class="d-flex j-content-center">
+                <div class="contact-info"><img src="images/email_03.jpg" alt="">
+                    <p class="text-uppercase">email
+                        <br><br> hello@codecafe.com<br> Personal@codecafe.com</p></div>
+                <div class="contact-info"><img src="images/office_05.jpg" alt="">
+                    <p class="text-uppercase">our office
+                        <br><br> 240 Bhatikhana, 8200 Barisal<br>Bangladesh</p></div>
+                <div class="contact-info"><img src="images/phone_08.jpg" alt="">
+                    <p class="text-uppercase">email
+                        <br><br> hello@codecafe.com<br> Personal@codecafe.com</p></div>
+            </div>
         </div>
     </div>
+    <div class="container">
+        <div class="row">
+            <form class="col-md-10 col-md-offset-1 d-flex j-space-betw">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Your name">
+                </div>
+                <div class="form-group">
+                    <input type="email" class="form-control" placeholder="Email address">
+                </div>
+                <div class="form-group">
+                    <input type="email" class="form-control" placeholder="Subject">
+                </div>
+                <textarea class="form-control style-textarea" rows="7"></textarea>
+                <button type="submit" class="btn btn-default text-uppercase">Submit now</button>
+            </form>
+        </div>
+    </div>
+    <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8754.21859275593!2d90.35330675736789!3d22.702376045275535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x37553417c54de47f%3A0x627ee23e5e6e3f78!2z4Ka44KeB4Kao4KeN4Kam4Kaw4Kas4KaoIOCmleCngeCmsOCmv-Cmr-CmvOCmvuCmsCDgprjgpr7gprDgp43gpq3gpr_gprg!5e0!3m2!1sru!2sua!4v1608888942413!5m2!1sru!2sua"
+                width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                tabindex="0"></iframe>
+        <div class="map-hover d-flex j-content-center">
+            <h3 class="text-uppercase">find us on the map<i class="fas fa-check-circle contrast-font"></i></h3>
+        </div>
     </div>
 </section>
+<footer>
+    <a href="#"></a>
+    <p></p>
+    <div class="items">
+        <div><i class="fab fa-facebook-f"></i></div>
+        <div><i class="fab fa-twitter"></i></div>
+        <div><i class="fab fa-linkedin-in"></i></div>
+        <div><i class="fab fa-instagram"></i></div>
+        <div><i class="fab fa-vimeo-v"></i></div>
+    </div>
+</footer>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script src="js/owl.carousel.js"></script>
 <script src="js/bootstrap.js"></script>
