--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 <body>
 <section class="main_page">
+    <div class="container text-center main-screen d-flex">
     <header>
-        <div class="container text-center">
+        <div class="container text-center menu">
             <nav class="navbar navbar-default">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
@@ -42,7 +43,7 @@
             <a href="#" id="up"><i class="fas fa-angle-up"></i></a>
         </div>
     </header>
-    <div class="container text-center">
+<!--    <div class="container text-center main-screen d-flex">-->
         <h1 class="text-uppercase">We are code cafe</h1>
         <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum</p>
         <div class="chevron"><i class="fas fa-chevron-down"></i></div>
@@ -59,7 +60,7 @@
                     fuga. Et harum quidem rerum facilis est et expedita distinctio. </p>
                 <a href="#details">Read more</a>
             </div>
-            <div class="col-md-3 col-md-offset-1">
+            <div class="col-md-3 col-md-offset-1 text-center">
                 <img src="images/mobile-phone_03.jpg" alt="image">
             </div>
         </div>
@@ -105,7 +106,7 @@
             <div class="photo-example"><img src="images/project-3_03.jpg" alt="project-example-3"></div>
         </div>
         <div class="bg">
-            <div class="container submit">
+            <div class="container submit d-flex">
                 <p>At vero eos et <span>accusamus</span> et iusto odio dignissimos ducimus qui blanditiis </p>
                 <a href="#">Submit now</a>
             </div>
@@ -118,7 +119,7 @@
         <p class="text-center comment">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
             praesentium</p>
         <div class="row serv-parts">
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <div class="col-xs-3">
                     <ul class="nav nav-tabs tabs sideways">
                         <li class="active"><a href="#first-serv" data-toggle="tab"><i class="fas fa-headset"></i></a>
@@ -156,14 +157,13 @@
                         <div class="tab-pane text-left" id="fourth-serv">
                             <h4>Last one</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At explicabo fugit non nulla
-                                odio
-                                officiis quaerat rerum sapiente. Aperiam aspernatur ea esse hic illo maiores modi odio
+                                odio officiis quaerat rerum sapiente. Aperiam aspernatur ea esse hic illo maiores modi odio
                                 quam ratione saepe?</p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6 right-part">
+            <div class="col-md-6 right-part">
                 <div class="percents"><img src="images/percent_03.jpg">
                     <p>Branding</p></div>
                 <div class="percents"><img src="images/percent_03.jpg">
@@ -664,15 +664,15 @@
         </div>
     </div>
 </section>
-<footer>
-    <a href="#"></a>
-    <p></p>
-    <div class="items">
-        <div><i class="fab fa-facebook-f"></i></div>
-        <div><i class="fab fa-twitter"></i></div>
-        <div><i class="fab fa-linkedin-in"></i></div>
-        <div><i class="fab fa-instagram"></i></div>
-        <div><i class="fab fa-vimeo-v"></i></div>
+<footer class="text-center">
+    <a href="#"><img src="images/logo_black_14.png" alt="logo"></a>
+    <p>Copyright 2015. All rights Reserved</p>
+    <div class="soc">
+        <a href="#" title="" target="_blank" class="text-center soc-item"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" title="" target="_blank" class="text-center soc-item twitter"><i class="fab fa-twitter"></i></a>
+        <a href="#" title="" target="_blank" class="text-center soc-item linkedin"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#" title="" target="_blank" class="text-center soc-item insta"><i class="fab fa-instagram"></i></a>
+        <a href="#" title="" target="_blank" class="text-center soc-item vimeo"><i class="fab fa-vimeo-v"></i></a>
     </div>
 </footer>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
