improve section services for mobile

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
             <a href="#" id="up"><i class="fas fa-angle-up"></i></a>
         </div>
     </header>
-<!--    <div class="container text-center main-screen d-flex">-->
         <h1 class="text-uppercase">We are code cafe</h1>
         <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum</p>
         <div class="chevron"><i class="fas fa-chevron-down"></i></div>
@@ -119,7 +118,6 @@
         <p class="text-center comment">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
             praesentium</p>
         <div class="row serv-parts">
-            <div class="col-md-6">
                 <div class="col-xs-3">
                     <ul class="nav nav-tabs tabs sideways">
                         <li class="active"><a href="#first-serv" data-toggle="tab"><i class="fas fa-headset"></i></a>
@@ -132,13 +130,25 @@
                 <div class="col-xs-9">
                     <div class="tab-content">
                         <div class="tab-pane active text-left" id="first-serv">
-                            <h4>Graphic Design</h4>
-                            <p class="p-16">At vero eos et <span class="contrast-font"> accusamus </span>et iusto odio
-                                dignissimos <span>ducimus</span> qui blanditiis praesentium </p>
-                            <p> quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
-                                <span class="contrast-font"> similique sunt </span> in culpa qui officia deserunt
-                                mollitia
-                                animi, id est laborum et dolorum fuga. </p>
+                            <div class="row">
+                            <div class="col-md-6">
+                                <h4>Graphic Design</h4>
+                                <p class="p-16">At vero eos et <span class="contrast-font"> accusamus </span>et iusto odio
+                                    dignissimos <span>ducimus</span> qui blanditiis praesentium </p>
+                                <p> quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
+                                    <span class="contrast-font"> similique sunt </span> in culpa qui officia deserunt
+                                    mollitia
+                                    animi, id est laborum et dolorum fuga. </p>
+                            </div>
+                            <div class="right-part col-md-6">
+                                <div class="percents"><img src="images/percent_03.jpg">
+                                    <p class="text-center">Branding</p></div>
+                                <div class="percents"><img src="images/percent_03.jpg">
+                                    <p class="text-center">Branding</p></div>
+                                <div class="percents"><img src="images/percent_03.jpg">
+                                    <p class="text-center">Branding</p></div>
+                            </div>
+                            </div>
                         </div>
                         <div class="tab-pane text-left" id="second-serv">
                             <h4>Another one</h4>
@@ -157,24 +167,17 @@
                         <div class="tab-pane text-left" id="fourth-serv">
                             <h4>Last one</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At explicabo fugit non nulla
-                                odio officiis quaerat rerum sapiente. Aperiam aspernatur ea esse hic illo maiores modi odio
+                                odio
+                                officiis quaerat rerum sapiente. Aperiam aspernatur ea esse hic illo maiores modi odio
                                 quam ratione saepe?</p>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-6 right-part">
-                <div class="percents"><img src="images/percent_03.jpg">
-                    <p>Branding</p></div>
-                <div class="percents"><img src="images/percent_03.jpg">
-                    <p>Branding</p></div>
-                <div class="percents"><img src="images/percent_03.jpg">
-                    <p>Branding</p></div>
-            </div>
         </div>
+
     </div>
     <div class="impressed">
-        <div class="container relative">
+        <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <h3 class="text-uppercase">Impressed?</h3>
@@ -183,7 +186,9 @@
                     <p class="by-line text-uppercase"><span>- Abdullah Noman</span><br>
                         Creatice Director, <span class="contrast-font">Code Cafe</span></p>
                 </div>
-                <img class="mac-comp" src="images/mac_03.png">
+                <div class="col-md-4 col-md-offset-2 relative">
+                    <img class="mac-comp" src="images/mac_03.png">
+                </div>
             </div>
         </div>
     </div>
@@ -660,7 +665,7 @@
                 width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
                 tabindex="0"></iframe>
         <div class="map-hover d-flex j-content-center">
-            <h3 class="text-uppercase">find us on the map<i class="fas fa-check-circle contrast-font"></i></h3>
+            <h3 class="text-uppercase">find us on the map  <i class="fas fa-check-circle contrast-font"></i></h3>
         </div>
     </div>
 </section>
