improve section testimonial (previously content was beyond block on ipad)

--- a/index.html
+++ b/index.html
@@ -473,8 +473,7 @@
             <h3 class="text-center text-uppercase">testimonials</h3>
             <p class="text-center comment">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
                 praesentium</p>
-            <div class="owl-carousel feedback">
-                <div class="container">
+            <div class="owl-carousel feedback container">
                     <div class="row">
                         <div class="col-md-2 col-md-offset-1"><img class="img-circle" src="images/testimonial_11.jpg"
                                                                    alt=""></div>
@@ -488,8 +487,6 @@
                         </p>
                         </div>
                     </div>
-                </div>
-                <div class="container">
                     <div class="row">
                         <div class="col-md-2 col-md-offset-1"><img class="img-circle" src="images/testimonial_11.jpg"
                                                                    alt=""></div>
@@ -503,8 +500,6 @@
                         </p>
                         </div>
                     </div>
-                </div>
-                <div class="container">
                     <div class="row">
                         <div class="col-md-2 col-md-offset-1"><img class="img-circle" src="images/testimonial_11.jpg"
                                                                    alt=""></div>
@@ -518,7 +513,6 @@
                         </p>
                         </div>
                     </div>
-                </div>
             </div>
         </div>
     </div>
